--- a/src/rmssd/1_explorer_data.ipynb
+++ b/src/rmssd/1_explorer_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -219,19 +219,19 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raw_data = pd.read_excel(\"../raw/Basal v2.xlsx\")\n",
+    "raw_data = pd.read_excel(\"../../raw/rmssd/Basal v2.xlsx\")\n",
     "raw_data.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "(531, 25)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "(0, 25)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "[6 rows x 22 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "Name: sex, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "(522, 10)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
        "max    135.666667  101.000000  120.000000  180.000000   57.074911  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
        "<AxesSubplot: xlabel='sex', ylabel='t2m_pre_rmssd'>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
        "Name: t2m_pre_rmssd, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,48 +958,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train.to_csv(\"../process_dataset/train_data.csv\", index=False)\n",
-    "X_val.to_csv(\"../process_dataset/val_data.csv\", index=False)\n",
-    "X_test.to_csv(\"../process_dataset/test_data.csv\", index=False)"
+    "X_train.to_csv(\"../../process_dataset/rmssd/train_data.csv\", index=False)\n",
+    "X_val.to_csv(\"../../process_dataset/rmssd/val_data.csv\", index=False)\n",
+    "X_test.to_csv(\"../../process_dataset/rmssd/test_data.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../process_dataset/y_train.npy\", 'wb') as doc_export:\n",
+    "with open(\"../../process_dataset/rmssd/y_train.npy\", 'wb') as doc_export:\n",
     "    np.save(doc_export, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../process_dataset/y_val.npy\", 'wb') as doc_export:\n",
+    "with open(\"../../process_dataset/rmssd/y_val.npy\", 'wb') as doc_export:\n",
     "    np.save(doc_export, y_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"../process_dataset/y_test.npy\", 'wb') as doc_export:\n",
+    "with open(\"../../process_dataset/rmssd/y_test.npy\", 'wb') as doc_export:\n",
     "    np.save(doc_export, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
        "Name: y_values, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19 (main, Mar 21 2024, 17:11:28) \n[GCC 11.2.0]"
+   "version": "3.9.19"
   },
   "orig_nbformat": 4,
   "vscode": {
