--- a/src/rmssd/3_training_model.ipynb
+++ b/src/rmssd/3_training_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,13 +22,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_data = pd.read_csv(\"../process_dataset/train_data_scaled.csv\")\n",
-    "response = np.load(\"../process_dataset/y_train.npy\")"
+    "df_data = pd.read_csv(\"../../process_dataset/rmssd/train_data_scaled.csv\")\n",
+    "response = np.load(\"../../process_dataset/rmssd/y_train.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "SVC()"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "DecisionTreeClassifier()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,25 +124,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../results/dt_model.joblib']"
+       "['../../results/rmssd/dt_model.joblib']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dump(rf_model, \"../results/rf_model.joblib\")\n",
-    "dump(svm_model, \"../results/svm_model.joblib\")\n",
-    "dump(knn_model, \"../results/knn_model.joblib\")\n",
-    "dump(dt_model, \"../results/dt_model.joblib\")"
+    "dump(rf_model, \"../../results/rmssd/rf_model.joblib\")\n",
+    "dump(svm_model, \"../../results/rmssd/svm_model.joblib\")\n",
+    "dump(knn_model, \"../../results/rmssd/knn_model.joblib\")\n",
+    "dump(dt_model, \"../../results/rmssd/dt_model.joblib\")"
    ]
   }
  ],
