--- a/src/rmssd/2_scaler_data.ipynb
+++ b/src/rmssd/2_scaler_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -216,19 +216,19 @@
        "[381 rows x 9 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_data = pd.read_csv(\"../process_dataset/train_data.csv\")\n",
+    "df_data = pd.read_csv(\"../../process_dataset/rmssd/train_data.csv\")\n",
     "df_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_scaled.to_csv(\"../process_dataset/train_data_scaled.csv\", index=False)"
+    "df_scaled.to_csv(\"../../process_dataset/rmssd/train_data_scaled.csv\", index=False)"
    ]
   },
   {
@@ -263,7 +263,7 @@
     {
      "data": {
       "text/plain": [
-       "['../results/scaler.joblib']"
+       "['../../results/rmssd/scaler.joblib']"
       ]
      },
      "execution_count": 8,
@@ -272,7 +272,7 @@
     }
    ],
    "source": [
-    "dump(scaler_instance, \"../results/scaler.joblib\")"
+    "dump(scaler_instance, \"../../results/rmssd/scaler.joblib\")"
    ]
   }
  ],
