--- a/src/rmssd/4_check_models.ipynb
+++ b/src/rmssd/4_check_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,33 +15,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler_instance = load(\"../results/scaler.joblib\")\n",
-    "knn_model = load(\"../results/knn_model.joblib\")\n",
-    "rf_model = load(\"../results/rf_model.joblib\")\n",
-    "svm_model = load(\"../results/svm_model.joblib\")\n",
-    "dt_model = load(\"../results/dt_model.joblib\")"
+    "scaler_instance = load(\"../../results/rmssd/scaler.joblib\")\n",
+    "knn_model = load(\"../../results/rmssd/knn_model.joblib\")\n",
+    "rf_model = load(\"../../results/rmssd/rf_model.joblib\")\n",
+    "svm_model = load(\"../../results/rmssd/svm_model.joblib\")\n",
+    "dt_model = load(\"../../results/rmssd/dt_model.joblib\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_data = pd.read_csv(\"../process_dataset/val_data.csv\")\n",
-    "test_data = pd.read_csv(\"../process_dataset/test_data.csv\")\n",
+    "val_data = pd.read_csv(\"../../process_dataset/rmssd/val_data.csv\")\n",
+    "test_data = pd.read_csv(\"../../process_dataset/rmssd/test_data.csv\")\n",
     "\n",
-    "y_val = np.load(\"../process_dataset/y_val.npy\")\n",
-    "y_test = np.load(\"../process_dataset/y_test.npy\")"
+    "y_val = np.load(\"../../process_dataset/rmssd/y_val.npy\")\n",
+    "y_test = np.load(\"../../process_dataset/rmssd/y_test.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "        [32, 11]])]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,22 +144,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.5104166666666666,\n",
-       " 0.2558139534883721,\n",
-       " 0.4230769230769231,\n",
-       " 0.3188405797101449,\n",
-       " -0.03044274661477632,\n",
-       " array([[38, 15],\n",
-       "        [32, 11]])]"
+       "[0.5416666666666666,\n",
+       " 0.27906976744186046,\n",
+       " 0.48,\n",
+       " 0.35294117647058815,\n",
+       " 0.03828418303335342,\n",
+       " array([[40, 13],\n",
+       "        [31, 12]])]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,22 +177,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.6415094339622641,\n",
+       "[0.660377358490566,\n",
        " 0.3125,\n",
-       " 0.38461538461538464,\n",
-       " 0.3448275862068966,\n",
-       " 0.10273355825475915,\n",
-       " array([[29,  8],\n",
+       " 0.4166666666666667,\n",
+       " 0.35714285714285715,\n",
+       " 0.1352631370262771,\n",
+       " array([[30,  7],\n",
        "        [11,  5]])]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "        [12,  4]])]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -257,62 +257,62 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.54, 0.46],\n",
+       "array([[0.57, 0.43],\n",
+       "       [0.58, 0.42],\n",
+       "       [0.78, 0.22],\n",
+       "       [0.64, 0.36],\n",
        "       [0.55, 0.45],\n",
-       "       [0.81, 0.19],\n",
-       "       [0.65, 0.35],\n",
-       "       [0.5 , 0.5 ],\n",
-       "       [0.66, 0.34],\n",
+       "       [0.71, 0.29],\n",
        "       [0.71, 0.29],\n",
        "       [0.84, 0.16],\n",
-       "       [0.61, 0.39],\n",
-       "       [0.78, 0.22],\n",
-       "       [0.66, 0.34],\n",
-       "       [0.78, 0.22],\n",
        "       [0.57, 0.43],\n",
-       "       [0.54, 0.46],\n",
+       "       [0.71, 0.29],\n",
+       "       [0.61, 0.39],\n",
        "       [0.75, 0.25],\n",
-       "       [0.87, 0.13],\n",
-       "       [0.66, 0.34],\n",
-       "       [0.85, 0.15],\n",
-       "       [0.24, 0.76],\n",
-       "       [0.86, 0.14],\n",
-       "       [0.66, 0.34],\n",
-       "       [0.69, 0.31],\n",
-       "       [0.17, 0.83],\n",
-       "       [0.51, 0.49],\n",
-       "       [0.54, 0.46],\n",
-       "       [0.6 , 0.4 ],\n",
-       "       [0.29, 0.71],\n",
-       "       [0.87, 0.13],\n",
-       "       [0.41, 0.59],\n",
-       "       [0.74, 0.26],\n",
-       "       [0.64, 0.36],\n",
-       "       [0.54, 0.46],\n",
-       "       [0.42, 0.58],\n",
+       "       [0.57, 0.43],\n",
+       "       [0.56, 0.44],\n",
        "       [0.76, 0.24],\n",
-       "       [0.48, 0.52],\n",
-       "       [0.35, 0.65],\n",
-       "       [0.59, 0.41],\n",
-       "       [0.72, 0.28],\n",
-       "       [0.63, 0.37],\n",
+       "       [0.89, 0.11],\n",
+       "       [0.55, 0.45],\n",
+       "       [0.84, 0.16],\n",
+       "       [0.33, 0.67],\n",
+       "       [0.85, 0.15],\n",
        "       [0.64, 0.36],\n",
-       "       [0.31, 0.69],\n",
-       "       [0.31, 0.69],\n",
+       "       [0.64, 0.36],\n",
+       "       [0.23, 0.77],\n",
+       "       [0.52, 0.48],\n",
        "       [0.54, 0.46],\n",
        "       [0.64, 0.36],\n",
-       "       [0.49, 0.51],\n",
+       "       [0.22, 0.78],\n",
+       "       [0.89, 0.11],\n",
+       "       [0.38, 0.62],\n",
+       "       [0.83, 0.17],\n",
+       "       [0.47, 0.53],\n",
+       "       [0.54, 0.46],\n",
+       "       [0.54, 0.46],\n",
+       "       [0.67, 0.33],\n",
+       "       [0.4 , 0.6 ],\n",
+       "       [0.3 , 0.7 ],\n",
+       "       [0.5 , 0.5 ],\n",
+       "       [0.67, 0.33],\n",
        "       [0.59, 0.41],\n",
-       "       [0.44, 0.56],\n",
-       "       [0.26, 0.74],\n",
-       "       [0.68, 0.32],\n",
+       "       [0.73, 0.27],\n",
+       "       [0.42, 0.58],\n",
+       "       [0.34, 0.66],\n",
+       "       [0.59, 0.41],\n",
+       "       [0.61, 0.39],\n",
+       "       [0.56, 0.44],\n",
+       "       [0.7 , 0.3 ],\n",
+       "       [0.43, 0.57],\n",
+       "       [0.25, 0.75],\n",
+       "       [0.71, 0.29],\n",
        "       [0.74, 0.26],\n",
        "       [0.36, 0.64],\n",
-       "       [0.69, 0.31],\n",
+       "       [0.76, 0.24],\n",
        "       [0.84, 0.16]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
