--- a/src/examples_0609/4_preprocessing_categorical.ipynb
+++ b/src/examples_0609/4_preprocessing_categorical.ipynb
@@ -378,7 +378,7 @@
     }
    ],
    "source": [
-    "df_data = pd.read_csv(\"2_datos_no_nulos.csv\")\n",
+    "df_data = pd.read_csv(\"../../process_dataset/examples_0609/2_datos_no_nulos.csv\")\n",
     "df_data"
    ]
   },
@@ -1295,7 +1295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_data.to_csv(\"4_dataset_procesed.csv\", index=False)"
+    "df_data.to_csv(\"../../process_dataset/examples_0609/4_dataset_procesed.csv\", index=False)"
    ]
   }
  ],
