--- a/src/examples_0609/2_evaluacion_datos.ipynb
+++ b/src/examples_0609/2_evaluacion_datos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,8 +55,8 @@
        "      <th>height mt</th>\n",
        "      <th>imc</th>\n",
        "      <th>check_altura</th>\n",
-       "      <th>check_imc</th>\n",
        "      <th>our_imc</th>\n",
+       "      <th>check_imc</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -81,8 +81,8 @@
        "      <td>1.60</td>\n",
        "      <td>27.343750</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>27.3437</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -105,8 +105,8 @@
        "      <td>1.49</td>\n",
        "      <td>23.422368</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>23.4224</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -129,8 +129,8 @@
        "      <td>1.70</td>\n",
        "      <td>28.027682</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>28.0277</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -153,8 +153,8 @@
        "      <td>1.60</td>\n",
        "      <td>33.203125</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>33.2031</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -177,8 +177,8 @@
        "      <td>1.51</td>\n",
        "      <td>30.261831</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>30.2618</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -207,29 +207,29 @@
        "3            72  90.000000     54       85.0        160       1.60  33.203125   \n",
        "4            80  96.666667     50       69.0        151       1.51  30.261831   \n",
        "\n",
-       "   check_altura  check_imc  our_imc  \n",
-       "0             1          1  27.3437  \n",
-       "1             1          1  23.4224  \n",
-       "2             1          1  28.0277  \n",
-       "3             1          1  33.2031  \n",
-       "4             1          1  30.2618  \n",
+       "   check_altura  our_imc  check_imc  \n",
+       "0             1  27.3437          1  \n",
+       "1             1  23.4224          1  \n",
+       "2             1  28.0277          1  \n",
+       "3             1  33.2031          1  \n",
+       "4             1  30.2618          1  \n",
        "\n",
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_data = pd.read_csv(\"1_first_result.csv\")\n",
+    "df_data = pd.read_csv(\"../../process_dataset/examples_0609/1_first_result.csv\")\n",
     "df_data.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "[529 rows x 22 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "21          our_imc            0              529"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1227,7 @@
        "[529 rows x 20 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
        "<Axes: xlabel='t2m_pre_sdnn'>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1287,7 @@
        "<Axes: xlabel='t2m_pre_sdnn', ylabel='Count'>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
        "<Axes: xlabel='t2m_pre_stress'>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1347,7 @@
        "<Axes: xlabel='t2m_pre_stress', ylabel='Count'>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
        "<Axes: xlabel='t2m_pre_rmssd'>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1407,7 @@
        "<Axes: xlabel='t2m_pre_rmssd', ylabel='Count'>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1448,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
        "(529, 20)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
        "(8, 20)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1528,11 +1528,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_data.to_csv(\"2_datos_no_nulos.csv\", index=False)"
+    "df_data.to_csv(\"../../process_dataset/examples_0609/2_datos_no_nulos.csv\", index=False)"
    ]
   }
  ],
