--- a/clustering_examples/0_example0512.ipynb
+++ b/clustering_examples/0_example0512.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "[86477 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,21 +218,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Activity\n",
+       "0    81300\n",
+       "1     5177\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_data[\"Activity\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.utils import shuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Activity\n",
+       "1    5177\n",
+       "0    5177\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_positivo = df_data[df_data[\"Activity\"] == 1]\n",
+    "df_negativo = df_data[df_data[\"Activity\"] == 0]\n",
+    "\n",
+    "df_negativo = shuffle(df_negativo, n_samples=len(df_positivo), random_state=42)\n",
+    "\n",
+    "df_concat = pd.concat([df_positivo, df_negativo], axis=0)\n",
+    "df_concat[\"Activity\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_data[\"MW\"] = df_data[\"sequence\"].apply(get_mw)\n",
-    "df_data[\"isoelectric_point\"] = df_data[\"sequence\"].apply(get_isoelectric_point)\n",
-    "df_data[\"aromaticity\"] = df_data[\"sequence\"].apply(get_aromaticity)\n",
-    "df_data[\"aliphatic_index\"] = df_data[\"sequence\"].apply(get_aliphatic_index)\n",
-    "df_data[\"boman_index\"] = df_data[\"sequence\"].apply(get_boman_index)\n",
-    "df_data[\"charge\"] = df_data[\"sequence\"].apply(get_charge)\n",
-    "df_data[\"charge_density\"] = df_data[\"sequence\"].apply(get_charge_density)\n",
-    "df_data[\"hydrophobic_ratio\"] = df_data[\"sequence\"].apply(get_hydrophobic_ratio)\n",
-    "df_data[\"instability_index\"] = df_data[\"sequence\"].apply(get_instability_index)\n",
+    "df_concat[\"MW\"] = df_concat[\"sequence\"].apply(get_mw)\n",
+    "df_concat[\"isoelectric_point\"] = df_concat[\"sequence\"].apply(get_isoelectric_point)\n",
+    "df_concat[\"aromaticity\"] = df_concat[\"sequence\"].apply(get_aromaticity)\n",
+    "df_concat[\"aliphatic_index\"] = df_concat[\"sequence\"].apply(get_aliphatic_index)\n",
+    "df_concat[\"boman_index\"] = df_concat[\"sequence\"].apply(get_boman_index)\n",
+    "df_concat[\"charge\"] = df_concat[\"sequence\"].apply(get_charge)\n",
+    "df_concat[\"charge_density\"] = df_concat[\"sequence\"].apply(get_charge_density)\n",
+    "df_concat[\"hydrophobic_ratio\"] = df_concat[\"sequence\"].apply(get_hydrophobic_ratio)\n",
+    "df_concat[\"instability_index\"] = df_concat[\"sequence\"].apply(get_instability_index)\n",
     "\n",
-    "df_data.to_csv(\"estimated_properties.csv\", index=False)"
+    "df_concat.to_csv(\"estimated_properties.csv\", index=False)"
    ]
   }
  ],
